// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FiltersContent /> should render the "Exists" filter 1`] = `
Array [
  .emotion-8 {
  padding: 4px;
  border-bottom: 1px solid #191919;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited {
  background-color: #73b61c;
}

.emotion-0:hover {
  background-color: #96c955;
}

.emotion-0[aria-disabled=true] {
  background-color: #808080;
}

.emotion-1 {
  width: 8px;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-2,
.emotion-2:hover,
.emotion-2:visited {
  background-color: #808080;
}

.emotion-2:hover {
  background-color: #b3b3b3;
}

.emotion-2[aria-disabled=true] {
  background-color: #808080;
}

.emotion-4 {
  height: 4px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  padding: 12px;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  color: #e0e0e0;
  background-color: #191919;
}

.emotion-5:focus {
  color: #191919;
  background-color: #ffffff;
}

.emotion-6 {
  width: 42px;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
  color: #000000;
  background-color: #808080;
  margin: 0;
  padding: 0;
  border: 0;
  cursor: not-allowed;
}

<div
    className="emotion-8"
  >
    <div
      className="emotion-3"
    >
      <button
        className="emotion-0"
        onClick={[Function]}
        type="button"
      >
        + Add Metadata Filters
      </button>
      <div
        className="emotion-1"
      />
      <button
        className="emotion-2"
        onClick={[Function]}
        type="button"
      >
        Clear All Filters
      </button>
    </div>
    <div
      className="emotion-4"
    />
    <form
      action=""
      method="post"
      onSubmit={[Function]}
    >
      <div
        className="emotion-7"
      >
        <input
          className="emotion-5"
          onChange={[Function]}
          placeholder="Create text filter (search name or field value)"
          type="text"
          value=""
        />
        <button
          aria-disabled={true}
          aria-label="Search"
          className="emotion-6"
          onClick={[Function]}
          type="submit"
        >
          +
        </button>
      </div>
    </form>
  </div>,
  .emotion-11 {
  overflow: auto;
}

.emotion-10 {
  background-color: #252525;
  border-radius: 2px;
}

.emotion-3 {
  border-bottom: 1px solid #4a4a4a;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 h4 {
  font-weight: 400;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-0:hover {
  color: #ffffff;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-9 {
  width: 100%;
  background-color: #191919;
}

.emotion-8 {
  padding: 16px;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #808080;
  border-radius: 2px;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-radius: 0;
  padding: 12px;
  background-color: #808080;
  color: #ffffff;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-4:hover {
  color: #ffffff;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-radius: 0;
  padding: 12px;
  background-color: transparent;
  color: #808080;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5:hover {
  color: #ffffff;
}

.emotion-7 {
  color: #808080;
  text-align: center;
  padding: 8px;
}

<div
    className="emotion-11"
  >
    <div
      className="emotion-10"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Collapse Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-0"
            color="#808080"
            data-file-name="chevron.svg"
            width={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          location.point
        </h4>
      </div>
      <div
        className="emotion-9"
      >
        <div
          className="emotion-8"
        >
          <div
            className="emotion-6"
          >
            <button
              className="emotion-4"
              onClick={[Function]}
              type="button"
            >
              Exists
            </button>
            <button
              className="emotion-5"
              onClick={[Function]}
              type="button"
            >
              Missing
            </button>
          </div>
          <div
            className="emotion-7"
          >
            <span>
              Show assets with the field "
              location.point
              "
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`<FiltersContent /> should render the "Facet" filter 1`] = `
Array [
  .emotion-8 {
  padding: 4px;
  border-bottom: 1px solid #191919;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited {
  background-color: #73b61c;
}

.emotion-0:hover {
  background-color: #96c955;
}

.emotion-0[aria-disabled=true] {
  background-color: #808080;
}

.emotion-1 {
  width: 8px;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-2,
.emotion-2:hover,
.emotion-2:visited {
  background-color: #808080;
}

.emotion-2:hover {
  background-color: #b3b3b3;
}

.emotion-2[aria-disabled=true] {
  background-color: #808080;
}

.emotion-4 {
  height: 4px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  padding: 12px;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  color: #e0e0e0;
  background-color: #191919;
}

.emotion-5:focus {
  color: #191919;
  background-color: #ffffff;
}

.emotion-6 {
  width: 42px;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
  color: #000000;
  background-color: #808080;
  margin: 0;
  padding: 0;
  border: 0;
  cursor: not-allowed;
}

<div
    className="emotion-8"
  >
    <div
      className="emotion-3"
    >
      <button
        className="emotion-0"
        onClick={[Function]}
        type="button"
      >
        + Add Metadata Filters
      </button>
      <div
        className="emotion-1"
      />
      <button
        className="emotion-2"
        onClick={[Function]}
        type="button"
      >
        Clear All Filters
      </button>
    </div>
    <div
      className="emotion-4"
    />
    <form
      action=""
      method="post"
      onSubmit={[Function]}
    >
      <div
        className="emotion-7"
      >
        <input
          className="emotion-5"
          onChange={[Function]}
          placeholder="Create text filter (search name or field value)"
          type="text"
          value=""
        />
        <button
          aria-disabled={true}
          aria-label="Search"
          className="emotion-6"
          onClick={[Function]}
          type="submit"
        >
          +
        </button>
      </div>
    </form>
  </div>,
  .emotion-54 {
  overflow: auto;
}

.emotion-53 {
  background-color: #252525;
  border-radius: 2px;
}

.emotion-3 {
  border-bottom: 1px solid #4a4a4a;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 h4 {
  font-weight: 400;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-0:hover {
  color: #ffffff;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-52 {
  width: 100%;
  background-color: #191919;
}

.emotion-51 {
  padding: 16px;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-51 > div {
  background-color: transparent;
  box-shadow: none;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  width: 100%;
  color: #b3b3b3;
  font-family: Roboto Condensed;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5:hover {
  color: #ffffff;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: Roboto Condensed;
  color: #b3b3b3;
}

.emotion-50 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-13 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  color: #ffffff;
}

.emotion-13:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-13[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-13:hover {
  background-color: #027aff38;
  color: #ffffff;
}

.emotion-12 {
  width: 100%;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%;
  border-top: 4px solid #73b61c;
}

.emotion-9 {
  height: 4px;
  width: 0%;
  border-top: 1px solid #3b3b3b;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 8px;
}

.emotion-14 {
  width: 67%;
  border-top: 4px solid #73b61c;
}

.emotion-15 {
  height: 4px;
  width: 33%;
  border-top: 1px solid #3b3b3b;
}

.emotion-20 {
  width: 34%;
  border-top: 4px solid #73b61c;
}

.emotion-21 {
  height: 4px;
  width: 66%;
  border-top: 1px solid #3b3b3b;
}

<div
    className="emotion-54"
  >
    <div
      className="emotion-53"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Collapse Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-0"
            color="#808080"
            data-file-name="chevron.svg"
            width={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          location.city
        </h4>
      </div>
      <div
        className="emotion-52"
      >
        <div
          className="emotion-51"
        >
          <div
            className="emotion-6"
          >
            <div
              className="emotion-4"
            />
            <button
              className="emotion-5"
              onClick={[Function]}
              type="button"
            >
              RESET
            </button>
          </div>
          <div
            className="emotion-7"
          >
            <div>
              KEYWORD
            </div>
            <div>
              COUNT
            </div>
          </div>
          <ul
            className="emotion-50"
          >
            <li>
              <button
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-12"
                >
                  <div
                    className="emotion-10"
                  >
                    <div
                      className="emotion-8"
                    />
                    <div
                      className="emotion-9"
                    />
                  </div>
                  <div
                    className="emotion-11"
                  >
                    <div>
                      Tyngsboro
                    </div>
                    <div>
                      3
                    </div>
                  </div>
                </div>
              </button>
            </li>
            <li>
              <button
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-12"
                >
                  <div
                    className="emotion-10"
                  >
                    <div
                      className="emotion-14"
                    />
                    <div
                      className="emotion-15"
                    />
                  </div>
                  <div
                    className="emotion-11"
                  >
                    <div>
                      Brooklyn
                    </div>
                    <div>
                      2
                    </div>
                  </div>
                </div>
              </button>
            </li>
            <li>
              <button
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-12"
                >
                  <div
                    className="emotion-10"
                  >
                    <div
                      className="emotion-20"
                    />
                    <div
                      className="emotion-21"
                    />
                  </div>
                  <div
                    className="emotion-11"
                  >
                    <div>
                      Cát Bà
                    </div>
                    <div>
                      1
                    </div>
                  </div>
                </div>
              </button>
            </li>
            <li>
              <button
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-12"
                >
                  <div
                    className="emotion-10"
                  >
                    <div
                      className="emotion-20"
                    />
                    <div
                      className="emotion-21"
                    />
                  </div>
                  <div
                    className="emotion-11"
                  >
                    <div>
                      La Habana Vieja
                    </div>
                    <div>
                      1
                    </div>
                  </div>
                </div>
              </button>
            </li>
            <li>
              <button
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-12"
                >
                  <div
                    className="emotion-10"
                  >
                    <div
                      className="emotion-20"
                    />
                    <div
                      className="emotion-21"
                    />
                  </div>
                  <div
                    className="emotion-11"
                  >
                    <div>
                      North Glendale
                    </div>
                    <div>
                      1
                    </div>
                  </div>
                </div>
              </button>
            </li>
            <li>
              <button
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-12"
                >
                  <div
                    className="emotion-10"
                  >
                    <div
                      className="emotion-20"
                    />
                    <div
                      className="emotion-21"
                    />
                  </div>
                  <div
                    className="emotion-11"
                  >
                    <div>
                      Saalfelden am Steinernen Meer
                    </div>
                    <div>
                      1
                    </div>
                  </div>
                </div>
              </button>
            </li>
            <li>
              <button
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-12"
                >
                  <div
                    className="emotion-10"
                  >
                    <div
                      className="emotion-20"
                    />
                    <div
                      className="emotion-21"
                    />
                  </div>
                  <div
                    className="emotion-11"
                  >
                    <div>
                      Zermatt
                    </div>
                    <div>
                      1
                    </div>
                  </div>
                </div>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`<FiltersContent /> should render the "Facet" filter 2`] = `
Array [
  .emotion-8 {
  padding: 4px;
  border-bottom: 1px solid #191919;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited {
  background-color: #73b61c;
}

.emotion-0:hover {
  background-color: #96c955;
}

.emotion-0[aria-disabled=true] {
  background-color: #808080;
}

.emotion-1 {
  width: 8px;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-2,
.emotion-2:hover,
.emotion-2:visited {
  background-color: #808080;
}

.emotion-2:hover {
  background-color: #b3b3b3;
}

.emotion-2[aria-disabled=true] {
  background-color: #808080;
}

.emotion-4 {
  height: 4px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  padding: 12px;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  color: #e0e0e0;
  background-color: #191919;
}

.emotion-5:focus {
  color: #191919;
  background-color: #ffffff;
}

.emotion-6 {
  width: 42px;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
  color: #000000;
  background-color: #808080;
  margin: 0;
  padding: 0;
  border: 0;
  cursor: not-allowed;
}

<div
    className="emotion-8"
  >
    <div
      className="emotion-3"
    >
      <button
        className="emotion-0"
        onClick={[Function]}
        type="button"
      >
        + Add Metadata Filters
      </button>
      <div
        className="emotion-1"
      />
      <button
        className="emotion-2"
        onClick={[Function]}
        type="button"
      >
        Clear All Filters
      </button>
    </div>
    <div
      className="emotion-4"
    />
    <form
      action=""
      method="post"
      onSubmit={[Function]}
    >
      <div
        className="emotion-7"
      >
        <input
          className="emotion-5"
          onChange={[Function]}
          placeholder="Create text filter (search name or field value)"
          type="text"
          value=""
        />
        <button
          aria-disabled={true}
          aria-label="Search"
          className="emotion-6"
          onClick={[Function]}
          type="submit"
        >
          +
        </button>
      </div>
    </form>
  </div>,
  .emotion-54 {
  overflow: auto;
}

.emotion-53 {
  background-color: #252525;
  border-radius: 2px;
}

.emotion-3 {
  border-bottom: 1px solid #4a4a4a;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 h4 {
  font-weight: 400;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-0:hover {
  color: #ffffff;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-52 {
  width: 100%;
  background-color: #191919;
}

.emotion-51 {
  padding: 16px;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-51 > div {
  background-color: transparent;
  box-shadow: none;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  width: 100%;
  color: #b3b3b3;
  font-family: Roboto Condensed;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5:hover {
  color: #ffffff;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: Roboto Condensed;
  color: #b3b3b3;
}

.emotion-50 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-13 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  color: #ffffff;
}

.emotion-13:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-13[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-13:hover {
  background-color: #027aff38;
  color: #ffffff;
}

.emotion-12 {
  width: 100%;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%;
  border-top: 4px solid #73b61c;
}

.emotion-9 {
  height: 4px;
  width: 0%;
  border-top: 1px solid #3b3b3b;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 8px;
}

.emotion-14 {
  width: 67%;
  border-top: 4px solid #73b61c;
}

.emotion-15 {
  height: 4px;
  width: 33%;
  border-top: 1px solid #3b3b3b;
}

.emotion-20 {
  width: 34%;
  border-top: 4px solid #73b61c;
}

.emotion-21 {
  height: 4px;
  width: 66%;
  border-top: 1px solid #3b3b3b;
}

<div
    className="emotion-54"
  >
    <div
      className="emotion-53"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Collapse Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-0"
            color="#808080"
            data-file-name="chevron.svg"
            width={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          location.city
        </h4>
      </div>
      <div
        className="emotion-52"
      >
        <div
          className="emotion-51"
        >
          <div
            className="emotion-6"
          >
            <div
              className="emotion-4"
            />
            <button
              className="emotion-5"
              onClick={[Function]}
              type="button"
            >
              RESET
            </button>
          </div>
          <div
            className="emotion-7"
          >
            <div>
              KEYWORD
            </div>
            <div>
              COUNT
            </div>
          </div>
          <ul
            className="emotion-50"
          >
            <li>
              <button
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-12"
                >
                  <div
                    className="emotion-10"
                  >
                    <div
                      className="emotion-8"
                    />
                    <div
                      className="emotion-9"
                    />
                  </div>
                  <div
                    className="emotion-11"
                  >
                    <div>
                      Tyngsboro
                    </div>
                    <div>
                      3
                    </div>
                  </div>
                </div>
              </button>
            </li>
            <li>
              <button
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-12"
                >
                  <div
                    className="emotion-10"
                  >
                    <div
                      className="emotion-14"
                    />
                    <div
                      className="emotion-15"
                    />
                  </div>
                  <div
                    className="emotion-11"
                  >
                    <div>
                      Brooklyn
                    </div>
                    <div>
                      2
                    </div>
                  </div>
                </div>
              </button>
            </li>
            <li>
              <button
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-12"
                >
                  <div
                    className="emotion-10"
                  >
                    <div
                      className="emotion-20"
                    />
                    <div
                      className="emotion-21"
                    />
                  </div>
                  <div
                    className="emotion-11"
                  >
                    <div>
                      Cát Bà
                    </div>
                    <div>
                      1
                    </div>
                  </div>
                </div>
              </button>
            </li>
            <li>
              <button
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-12"
                >
                  <div
                    className="emotion-10"
                  >
                    <div
                      className="emotion-20"
                    />
                    <div
                      className="emotion-21"
                    />
                  </div>
                  <div
                    className="emotion-11"
                  >
                    <div>
                      La Habana Vieja
                    </div>
                    <div>
                      1
                    </div>
                  </div>
                </div>
              </button>
            </li>
            <li>
              <button
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-12"
                >
                  <div
                    className="emotion-10"
                  >
                    <div
                      className="emotion-20"
                    />
                    <div
                      className="emotion-21"
                    />
                  </div>
                  <div
                    className="emotion-11"
                  >
                    <div>
                      North Glendale
                    </div>
                    <div>
                      1
                    </div>
                  </div>
                </div>
              </button>
            </li>
            <li>
              <button
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-12"
                >
                  <div
                    className="emotion-10"
                  >
                    <div
                      className="emotion-20"
                    />
                    <div
                      className="emotion-21"
                    />
                  </div>
                  <div
                    className="emotion-11"
                  >
                    <div>
                      Saalfelden am Steinernen Meer
                    </div>
                    <div>
                      1
                    </div>
                  </div>
                </div>
              </button>
            </li>
            <li>
              <button
                className="emotion-13"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="emotion-12"
                >
                  <div
                    className="emotion-10"
                  >
                    <div
                      className="emotion-20"
                    />
                    <div
                      className="emotion-21"
                    />
                  </div>
                  <div
                    className="emotion-11"
                  >
                    <div>
                      Zermatt
                    </div>
                    <div>
                      1
                    </div>
                  </div>
                </div>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`<FiltersContent /> should render the "Range" filter 1`] = `
Array [
  .emotion-8 {
  padding: 4px;
  border-bottom: 1px solid #191919;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited {
  background-color: #73b61c;
}

.emotion-0:hover {
  background-color: #96c955;
}

.emotion-0[aria-disabled=true] {
  background-color: #808080;
}

.emotion-1 {
  width: 8px;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-2,
.emotion-2:hover,
.emotion-2:visited {
  background-color: #808080;
}

.emotion-2:hover {
  background-color: #b3b3b3;
}

.emotion-2[aria-disabled=true] {
  background-color: #808080;
}

.emotion-4 {
  height: 4px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  padding: 12px;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  color: #e0e0e0;
  background-color: #191919;
}

.emotion-5:focus {
  color: #191919;
  background-color: #ffffff;
}

.emotion-6 {
  width: 42px;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
  color: #000000;
  background-color: #808080;
  margin: 0;
  padding: 0;
  border: 0;
  cursor: not-allowed;
}

<div
    className="emotion-8"
  >
    <div
      className="emotion-3"
    >
      <button
        className="emotion-0"
        onClick={[Function]}
        type="button"
      >
        + Add Metadata Filters
      </button>
      <div
        className="emotion-1"
      />
      <button
        className="emotion-2"
        onClick={[Function]}
        type="button"
      >
        Clear All Filters
      </button>
    </div>
    <div
      className="emotion-4"
    />
    <form
      action=""
      method="post"
      onSubmit={[Function]}
    >
      <div
        className="emotion-7"
      >
        <input
          className="emotion-5"
          onChange={[Function]}
          placeholder="Create text filter (search name or field value)"
          type="text"
          value=""
        />
        <button
          aria-disabled={true}
          aria-label="Search"
          className="emotion-6"
          onClick={[Function]}
          type="submit"
        >
          +
        </button>
      </div>
    </form>
  </div>,
  .emotion-20 {
  overflow: auto;
}

.emotion-19 {
  background-color: #252525;
  border-radius: 2px;
}

.emotion-3 {
  border-bottom: 1px solid #4a4a4a;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 h4 {
  font-weight: 400;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-0:hover {
  color: #ffffff;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-18 {
  width: 100%;
  background-color: #191919;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  width: 100%;
  color: #b3b3b3;
  font-family: Roboto Condensed;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5:hover {
  color: #ffffff;
}

.emotion-17 {
  padding: 16px;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-17 > div {
  background-color: transparent;
  box-shadow: none;
}

.emotion-16 {
  padding: 16px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 12px;
}

.emotion-10 {
  padding: 4px;
}

.emotion-8 {
  position: absolute;
  width: 100%;
  height: 2px;
  -webkit-transform: translate(0%,-50%);
  -ms-transform: translate(0%,-50%);
  transform: translate(0%,-50%);
  cursor: pointer;
}

.emotion-9 {
  position: absolute;
  width: 100%;
  height: 2px;
  -webkit-transform: translate(0%,-50%);
  -ms-transform: translate(0%,-50%);
  transform: translate(0%,-50%);
  pointer-events: none;
  background-color: #4a4a4a;
}

.emotion-15 {
  padding-top: 24px;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-11 {
  min-width: 76px;
  background-color: #252525;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 16px;
  padding-bottom: 16px;
  text-align: center;
  border-radius: 2px;
}

<div
    className="emotion-20"
  >
    <div
      className="emotion-19"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Collapse Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-0"
            color="#808080"
            data-file-name="chevron.svg"
            width={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          clip.length
        </h4>
      </div>
      <div
        className="emotion-18"
      >
        <div
          className="emotion-17"
        >
          <div>
            <div
              className="emotion-6"
            >
              <div
                className="emotion-4"
              />
              <button
                className="emotion-5"
                onClick={[Function]}
                type="button"
              >
                RESET
              </button>
            </div>
            <div
              className="emotion-16"
            >
              <div
                className="emotion-7"
              >
                <span>
                  180
                </span>
                <span>
                  8525
                </span>
              </div>
              <div
                className="emotion-10"
              >
                <div
                  style={
                    Object {
                      "position": "relative",
                      "width": "100%",
                    }
                  }
                >
                  <div
                    className="emotion-8"
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                  />
                  <div
                    className="emotion-9"
                  />
                  <div>
                    <button
                      aria-valuenow={200}
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      onTouchStart={[Function]}
                      role="slider"
                      style={
                        Object {
                          "backgroundColor": "#808080",
                          "border": "none",
                          "borderRadius": 1,
                          "cursor": "pointer",
                          "height": 24,
                          "left": "0.2396644697423607%",
                          "margin": 0,
                          "padding": 0,
                          "position": "absolute",
                          "transform": "translate(-50%, -50%)",
                          "width": 8,
                          "zIndex": 2,
                        }
                      }
                      type="button"
                    />
                    <button
                      aria-valuenow={8525}
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      onTouchStart={[Function]}
                      role="slider"
                      style={
                        Object {
                          "backgroundColor": "#808080",
                          "border": "none",
                          "borderRadius": 1,
                          "cursor": "pointer",
                          "height": 24,
                          "left": "100%",
                          "margin": 0,
                          "padding": 0,
                          "position": "absolute",
                          "transform": "translate(-50%, -50%)",
                          "width": 8,
                          "zIndex": 2,
                        }
                      }
                      type="button"
                    />
                  </div>
                  <div>
                    <div
                      onMouseDown={[Function]}
                      onTouchStart={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#73b61c",
                          "cursor": "pointer",
                          "height": 4,
                          "left": "0.2396644697423607%",
                          "position": "absolute",
                          "transform": "translate(0%, -50%)",
                          "width": "99.76033553025763%",
                          "zIndex": 1,
                        }
                      }
                    />
                  </div>
                </div>
              </div>
              <div
                className="emotion-15"
              >
                <div
                  className="emotion-12"
                >
                  MIN  
                  <div
                    className="emotion-11"
                  >
                    200
                  </div>
                </div>
                <div
                  className="emotion-12"
                >
                  MAX  
                  <div
                    className="emotion-11"
                  >
                    8525
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`<FiltersContent /> should render the "Range" filter 2`] = `
Array [
  .emotion-8 {
  padding: 4px;
  border-bottom: 1px solid #191919;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited {
  background-color: #73b61c;
}

.emotion-0:hover {
  background-color: #96c955;
}

.emotion-0[aria-disabled=true] {
  background-color: #808080;
}

.emotion-1 {
  width: 8px;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-2,
.emotion-2:hover,
.emotion-2:visited {
  background-color: #808080;
}

.emotion-2:hover {
  background-color: #b3b3b3;
}

.emotion-2[aria-disabled=true] {
  background-color: #808080;
}

.emotion-4 {
  height: 4px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  padding: 12px;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  color: #e0e0e0;
  background-color: #191919;
}

.emotion-5:focus {
  color: #191919;
  background-color: #ffffff;
}

.emotion-6 {
  width: 42px;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
  color: #000000;
  background-color: #808080;
  margin: 0;
  padding: 0;
  border: 0;
  cursor: not-allowed;
}

<div
    className="emotion-8"
  >
    <div
      className="emotion-3"
    >
      <button
        className="emotion-0"
        onClick={[Function]}
        type="button"
      >
        + Add Metadata Filters
      </button>
      <div
        className="emotion-1"
      />
      <button
        className="emotion-2"
        onClick={[Function]}
        type="button"
      >
        Clear All Filters
      </button>
    </div>
    <div
      className="emotion-4"
    />
    <form
      action=""
      method="post"
      onSubmit={[Function]}
    >
      <div
        className="emotion-7"
      >
        <input
          className="emotion-5"
          onChange={[Function]}
          placeholder="Create text filter (search name or field value)"
          type="text"
          value=""
        />
        <button
          aria-disabled={true}
          aria-label="Search"
          className="emotion-6"
          onClick={[Function]}
          type="submit"
        >
          +
        </button>
      </div>
    </form>
  </div>,
  .emotion-20 {
  overflow: auto;
}

.emotion-19 {
  background-color: #252525;
  border-radius: 2px;
}

.emotion-3 {
  border-bottom: 1px solid #4a4a4a;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 h4 {
  font-weight: 400;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-0:hover {
  color: #ffffff;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-18 {
  width: 100%;
  background-color: #191919;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  width: 100%;
  color: #b3b3b3;
  font-family: Roboto Condensed;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5:hover {
  color: #ffffff;
}

.emotion-17 {
  padding: 16px;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-17 > div {
  background-color: transparent;
  box-shadow: none;
}

.emotion-16 {
  padding: 16px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 12px;
}

.emotion-10 {
  padding: 4px;
}

.emotion-8 {
  position: absolute;
  width: 100%;
  height: 2px;
  -webkit-transform: translate(0%,-50%);
  -ms-transform: translate(0%,-50%);
  transform: translate(0%,-50%);
  cursor: pointer;
}

.emotion-9 {
  position: absolute;
  width: 100%;
  height: 2px;
  -webkit-transform: translate(0%,-50%);
  -ms-transform: translate(0%,-50%);
  transform: translate(0%,-50%);
  pointer-events: none;
  background-color: #4a4a4a;
}

.emotion-15 {
  padding-top: 24px;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-11 {
  min-width: 76px;
  background-color: #252525;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 16px;
  padding-bottom: 16px;
  text-align: center;
  border-radius: 2px;
}

<div
    className="emotion-20"
  >
    <div
      className="emotion-19"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Collapse Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-0"
            color="#808080"
            data-file-name="chevron.svg"
            width={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          clip.length
        </h4>
      </div>
      <div
        className="emotion-18"
      >
        <div
          className="emotion-17"
        >
          <div>
            <div
              className="emotion-6"
            >
              <div
                className="emotion-4"
              />
              <button
                className="emotion-5"
                onClick={[Function]}
                type="button"
              >
                RESET
              </button>
            </div>
            <div
              className="emotion-16"
            >
              <div
                className="emotion-7"
              >
                <span>
                  180
                </span>
                <span>
                  8525
                </span>
              </div>
              <div
                className="emotion-10"
              >
                <div
                  style={
                    Object {
                      "position": "relative",
                      "width": "100%",
                    }
                  }
                >
                  <div
                    className="emotion-8"
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                  />
                  <div
                    className="emotion-9"
                  />
                  <div>
                    <button
                      aria-valuenow={180}
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      onTouchStart={[Function]}
                      role="slider"
                      style={
                        Object {
                          "backgroundColor": "#808080",
                          "border": "none",
                          "borderRadius": 1,
                          "cursor": "pointer",
                          "height": 24,
                          "left": "0%",
                          "margin": 0,
                          "padding": 0,
                          "position": "absolute",
                          "transform": "translate(-50%, -50%)",
                          "width": 8,
                          "zIndex": 2,
                        }
                      }
                      type="button"
                    />
                    <button
                      aria-valuenow={8525}
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      onTouchStart={[Function]}
                      role="slider"
                      style={
                        Object {
                          "backgroundColor": "#808080",
                          "border": "none",
                          "borderRadius": 1,
                          "cursor": "pointer",
                          "height": 24,
                          "left": "100%",
                          "margin": 0,
                          "padding": 0,
                          "position": "absolute",
                          "transform": "translate(-50%, -50%)",
                          "width": 8,
                          "zIndex": 2,
                        }
                      }
                      type="button"
                    />
                  </div>
                  <div>
                    <div
                      onMouseDown={[Function]}
                      onTouchStart={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#73b61c",
                          "cursor": "pointer",
                          "height": 4,
                          "left": "0%",
                          "position": "absolute",
                          "transform": "translate(0%, -50%)",
                          "width": "100%",
                          "zIndex": 1,
                        }
                      }
                    />
                  </div>
                </div>
              </div>
              <div
                className="emotion-15"
              >
                <div
                  className="emotion-12"
                >
                  MIN  
                  <div
                    className="emotion-11"
                  >
                    180
                  </div>
                </div>
                <div
                  className="emotion-12"
                >
                  MAX  
                  <div
                    className="emotion-11"
                  >
                    8525
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`<FiltersContent /> should render the "Range" filter with file sizes 1`] = `
Array [
  .emotion-8 {
  padding: 4px;
  border-bottom: 1px solid #191919;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited {
  background-color: #73b61c;
}

.emotion-0:hover {
  background-color: #96c955;
}

.emotion-0[aria-disabled=true] {
  background-color: #808080;
}

.emotion-1 {
  width: 8px;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-2,
.emotion-2:hover,
.emotion-2:visited {
  background-color: #808080;
}

.emotion-2:hover {
  background-color: #b3b3b3;
}

.emotion-2[aria-disabled=true] {
  background-color: #808080;
}

.emotion-4 {
  height: 4px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  padding: 12px;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  color: #e0e0e0;
  background-color: #191919;
}

.emotion-5:focus {
  color: #191919;
  background-color: #ffffff;
}

.emotion-6 {
  width: 42px;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
  color: #000000;
  background-color: #808080;
  margin: 0;
  padding: 0;
  border: 0;
  cursor: not-allowed;
}

<div
    className="emotion-8"
  >
    <div
      className="emotion-3"
    >
      <button
        className="emotion-0"
        onClick={[Function]}
        type="button"
      >
        + Add Metadata Filters
      </button>
      <div
        className="emotion-1"
      />
      <button
        className="emotion-2"
        onClick={[Function]}
        type="button"
      >
        Clear All Filters
      </button>
    </div>
    <div
      className="emotion-4"
    />
    <form
      action=""
      method="post"
      onSubmit={[Function]}
    >
      <div
        className="emotion-7"
      >
        <input
          className="emotion-5"
          onChange={[Function]}
          placeholder="Create text filter (search name or field value)"
          type="text"
          value=""
        />
        <button
          aria-disabled={true}
          aria-label="Search"
          className="emotion-6"
          onClick={[Function]}
          type="submit"
        >
          +
        </button>
      </div>
    </form>
  </div>,
  .emotion-20 {
  overflow: auto;
}

.emotion-19 {
  background-color: #252525;
  border-radius: 2px;
}

.emotion-3 {
  border-bottom: 1px solid #4a4a4a;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 h4 {
  font-weight: 400;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-0:hover {
  color: #ffffff;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-18 {
  width: 100%;
  background-color: #191919;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  width: 100%;
  color: #b3b3b3;
  font-family: Roboto Condensed;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5:hover {
  color: #ffffff;
}

.emotion-17 {
  padding: 16px;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-17 > div {
  background-color: transparent;
  box-shadow: none;
}

.emotion-16 {
  padding: 16px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 12px;
}

.emotion-10 {
  padding: 4px;
}

.emotion-8 {
  position: absolute;
  width: 100%;
  height: 2px;
  -webkit-transform: translate(0%,-50%);
  -ms-transform: translate(0%,-50%);
  transform: translate(0%,-50%);
  cursor: pointer;
}

.emotion-9 {
  position: absolute;
  width: 100%;
  height: 2px;
  -webkit-transform: translate(0%,-50%);
  -ms-transform: translate(0%,-50%);
  transform: translate(0%,-50%);
  pointer-events: none;
  background-color: #4a4a4a;
}

.emotion-15 {
  padding-top: 24px;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-11 {
  min-width: 76px;
  background-color: #252525;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 16px;
  padding-bottom: 16px;
  text-align: center;
  border-radius: 2px;
}

<div
    className="emotion-20"
  >
    <div
      className="emotion-19"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Collapse Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-0"
            color="#808080"
            data-file-name="chevron.svg"
            width={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          source.filesize
        </h4>
      </div>
      <div
        className="emotion-18"
      >
        <div
          className="emotion-17"
        >
          <div>
            <div
              className="emotion-6"
            >
              <div
                className="emotion-4"
              />
              <button
                className="emotion-5"
                onClick={[Function]}
                type="button"
              >
                RESET
              </button>
            </div>
            <div
              className="emotion-16"
            >
              <div
                className="emotion-7"
              >
                <span>
                  180 Bytes
                </span>
                <span>
                  8.3 KB
                </span>
              </div>
              <div
                className="emotion-10"
              >
                <div
                  style={
                    Object {
                      "position": "relative",
                      "width": "100%",
                    }
                  }
                >
                  <div
                    className="emotion-8"
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                  />
                  <div
                    className="emotion-9"
                  />
                  <div>
                    <button
                      aria-valuenow={180}
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      onTouchStart={[Function]}
                      role="slider"
                      style={
                        Object {
                          "backgroundColor": "#808080",
                          "border": "none",
                          "borderRadius": 1,
                          "cursor": "pointer",
                          "height": 24,
                          "left": "0%",
                          "margin": 0,
                          "padding": 0,
                          "position": "absolute",
                          "transform": "translate(-50%, -50%)",
                          "width": 8,
                          "zIndex": 2,
                        }
                      }
                      type="button"
                    />
                    <button
                      aria-valuenow={8525}
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      onTouchStart={[Function]}
                      role="slider"
                      style={
                        Object {
                          "backgroundColor": "#808080",
                          "border": "none",
                          "borderRadius": 1,
                          "cursor": "pointer",
                          "height": 24,
                          "left": "100%",
                          "margin": 0,
                          "padding": 0,
                          "position": "absolute",
                          "transform": "translate(-50%, -50%)",
                          "width": 8,
                          "zIndex": 2,
                        }
                      }
                      type="button"
                    />
                  </div>
                  <div>
                    <div
                      onMouseDown={[Function]}
                      onTouchStart={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#73b61c",
                          "cursor": "pointer",
                          "height": 4,
                          "left": "0%",
                          "position": "absolute",
                          "transform": "translate(0%, -50%)",
                          "width": "100%",
                          "zIndex": 1,
                        }
                      }
                    />
                  </div>
                </div>
              </div>
              <div
                className="emotion-15"
              >
                <div
                  className="emotion-12"
                >
                  MIN  
                  <div
                    className="emotion-11"
                  >
                    180 Bytes
                  </div>
                </div>
                <div
                  className="emotion-12"
                >
                  MAX  
                  <div
                    className="emotion-11"
                  >
                    8.3 KB
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
